# gaia-ai-agent-template

./: .gitignore  .gitmodules  Cargo.toml  README.md  blueprint.json  build.rs  rust-toolchain.toml
contracts/: remappings.txt
contracts/src/: GaiaAiAgentBlueprint.sol  GaiaAiAgentServiceManager.sol  GaiaAiAgentTaskManager.sol  HelloBlueprint.sol  IGaiaAiAgentTaskManager.sol
src/: lib.rs  main.rs  runner.rs
src/actix_server/: gaia_client.rs  mod.rs  server.rs  types.rs
