[package]
name = "gaia-ai-agent-template"
version = "0.1.0"
edition = "2021"
description = "A template Tangle Blueprint (AVS) for a gaia ai agent application service."
authors = ["drewstone <drewstone329@gmail.com>"]
license = "Unlicense"
homepage = "https://tangle.tools"
repository = "https://github.com/drewstone/gaia-ai-agent-template"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "tangle-blueprint"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
tracing = "0.1"
async-trait = "0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
structopt = "0.3.26"
color-eyre = "0.6"
tokio = { version = "1.39", default-features = false, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter"] }
gadget-sdk = { git = "https://github.com/webb-tools/gadget", default-features = false, features = ["std", "getrandom"] }
parking_lot = "0.12.3"
openai_dive = "0.6"
actix-web = "4.9.0"
thiserror = "1.0.64"
url = "2.5.2"
reqwest = "0.12.8"
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
blueprint-metadata = "0.1"

